--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest --watchAll",
     "test:createTeam": "jest --watch createTeam.spec.ts",
+    "test:createMatch": "jest --watch createMatch.spec.ts",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/index.ts",
     "build": "tsc",
     "lint": "eslint --fix ./src"
