--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "jest": "^29.7.0",
+    "postgres": "^3.4.4",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.20",
     "typescript": "^5.4.5",
     "uuid": "^9.0.1"
   }
