--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "jest": "^29.7.0",
+    "pg": "^8.11.5",
     "postgres": "^3.4.4",
+    "postgresql": "^0.0.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20",
     "typescript": "^5.4.5",
