--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:createMatch": "jest --watch createMatch.spec.ts",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/index.ts",
     "build": "tsc",
-    "lint": "eslint --fix ./src"
+    "lint": "eslint --fix ./src",
+    "migrations:run": "typeorm-ts-node-commonjs migration:run -d src/database/dataSource.ts",
+    "migrations:revert": "typeorm-ts-node-commonjs migration:revert -d src/database/dataSource.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
