--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.7",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
@@ -38,6 +39,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "jest": "^29.7.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "postgresql": "^0.0.1",
